# Draft_blog_e2e

./: README.md  docker-compose.yml  env.db
backend/: .coveragerc  .gitignore  Dockerfile  pyproject.toml  pytest.ini
backend/blog_backend/: settings.py  urls.py
backend/core/: models.py  serializers.py  urls.py  utils.py  views.py
backend/core/migrations/: 0001_created_post_model.py
backend/core/tests/: test_models.py  test_serializers.py  test_utils.py  test_views.py
backend/docker_entrypoints/: run_backend.sh
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: App.tsx
frontend/src/__tests__/: AuthContext.test.tsx  Copyright.test.tsx
frontend/src/components/atoms/: Copyright.tsx  SanitizeContent.tsx
frontend/src/components/atoms/SanitizeContent/: SanitizeContent.tsx
frontend/src/components/molecules/: PostDetails.tsx  TileData.tsx
frontend/src/components/molecules/PostDetails/: PostDetails.styles.tsx  PostDetails.tsx
frontend/src/components/organisms/: Navbar.tsx  Tile.tsx
frontend/src/components/organisms/AddPost/: AddPost.styles.ts  AddPost.tsx
frontend/src/components/views/: Home.tsx  SignIn.tsx  SignUp.tsx
frontend/src/components/views/Home/: Home.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx  PostsContext.tsx
frontend/src/contexts/__tests__/: AuthContext.test.tsx
frontend/src/utils/: PrivateRoute.tsx  testUtils.tsx
frontend/src/utils/interceptors/: jwtInterceptor.tsx
frontend/src/utils/interfaces/: navbar_interfaces.ts  posts_interfaces.ts  posts_interfaces.tsx
(+6 files in other folders)
